# danholman-portfolio

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTEXT.md  CONTRIBUTING.md  Makefile  README.md  debug-results.json  gitleaks.toml  quality-check  quality-results.json
.github/: pull_request_template.md
ai-rulesets/: .env.example  .gitignore  Makefile  README.md  allure-categories.json  allure.properties  pyproject.toml  python-makefile-rules.md
ai-rulesets/.cursor/rules/: python-pytest-testing-rules.mdc
ai-rulesets/.github/workflows/: build.yml  parallel-testing.yml  test.yml
ai-rulesets/agents/: example-agent.public.yaml
ai-rulesets/docs/: allure-integration.md  architecture.md  parallel-testing.md  quality-checker.md
ai-rulesets/evals/: example-cf.yaml
ai-rulesets/examples/: README.md  copilot-instructions-example.md  create-custom-guidance.md  create_fastapi_guidance.py  cursor-rules-example.md  fastapi-testing-guidance.yaml  sample_fastapi_app.py
ai-rulesets/prompts/: example-prompt.public.md
ai-rulesets/src/ai_rulesets/: __init__.py  __main__.py  cli.py  core.py  main.py
ai-rulesets/src/ai_rulesets.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ai-rulesets/tests/: test_module_import.py  test_regression.py
ai-rulesets/tests/component/: __init__.py  test_renderers_component.py
ai-rulesets/tests/e2e/: __init__.py  test_guidance_generation_e2e.py
ai-rulesets/tests/integration/: __init__.py  test_cli_integration.py
ai-rulesets/tests/unit/: __init__.py  test_core.py
ai-test-generation/: .coverage  CHANGELOG.md  Makefile  README.md  allure.properties  coverage.xml  pyproject.toml  requirements.txt
ai-test-generation/.github/workflows/: build.yml  parallel-testing.yml  test.yml
ai-test-generation/docs/: allure-integration.md  architecture.md  parallel-testing.md
ai-test-generation/evals/: README.md
ai-test-generation/evals/cases/: summarize.jsonl
ai-test-generation/examples/: README.md  copilot-instructions-example.md  create-custom-guidance.md  create_fastapi_guidance.py  cursor-rules-example.md  generated_tests_example.py
ai-test-generation/reports/allure-results/: 0015f41b-ebe4-47ce-8bdb-ef60c989ed43-result.json  005f5e90-6f4a-4a32-b42a-efb54df9c99e-result.json  00ed2e07-e505-4aff-8aa5-c277bf267f48-result.json  05e30f5f-d87e-4bd3-b420-09d83a848be9-result.json  07b6aa2b-c339-4993-86bf-fd3a5ad259f0-result.json  082b5a46-d234-4087-901d-a76bc97828b3-result.json  09cbc616-f956-405f-b1f6-42d47f0750e0-result.json  0df3c716-06a2-4640-9d1f-ac5d5a1d9a83-attachment.txt  0e685766-f0b0-4ede-92e7-a6ba1e8093e1-result.json  11022935-c5c0-44f8-9a1d-278c8a964ad4-result.json  12d3ab76-1aec-4f9c-87da-2c9552051d80-result.json  12f0419c-8f94-426d-9416-0794eb227de8-attachment.txt  135b9176-cf84-4118-8fa3-c84e2086c383-result.json  140cc96b-466b-4741-a13a-4bc74ed44308-result.json  15787913-171a-42b1-a7ee-951f4adef27d-container.json  187bf431-367e-4827-9fcf-74b5d6606502-attachment.yaml  19155882-37fd-4c4c-b49e-11f53d7dcdf9-result.json  19798636-c043-477d-91f1-5b126eca570f-attachment.txt  1c4e66ff-bac6-43d7-bb15-697769a8b778-result.json  20668a3c-a813-4766-8e8f-39981ee4aa09-result.json  24df3003-01cf-4c72-8398-8dd9f58491aa-result.json  29567969-bd03-431c-823d-45ce238546ec-container.json  29f69446-d2da-417e-b588-7bacbef8d31c-result.json  2ab8de30-4d19-4ef5-bf31-d194f326416d-result.json  2ff03871-f3ac-4f3f-b8d8-5b83552110e6-result.json  31cb29e3-b240-4830-a96a-69551d738098-attachment.json  32c3ec26-4ef0-4194-a59b-9d1357bd6f56-result.json  369218a9-1d98-45d0-83f1-056d1f3d9653-container.json  36f9151c-bd9c-4e1f-a2b5-3fb6c0b14178-attachment.txt  396f5337-dc40-428e-b7c3-0be3a27f0465-attachment.json  399aeb28-75f7-4524-b7ea-29918e422ca6-result.json  39bb5413-5be0-419d-b565-5f58c83aa82c-result.json  3a893105-8523-4b63-8da1-e502da570f17-result.json  3c58b839-9124-4514-bd89-45735d75b71e-result.json  3e12b96e-78c1-4560-8c5f-0315cefae42e-attachment.txt  4289b7d3-b9ce-446f-a8c0-0f097b258c3d-result.json  431aa645-6a1c-4fb9-9912-f684cd72b5e9-result.json  44ca6bb6-54f7-4fd8-ab8b-28d8ba69dd54-result.json  45011733-9ea9-4862-9da6-5fc77d1ac665-result.json  4575eeda-24f9-4922-8e75-56a3ab003ef6-result.json  (+85 more)
ai-test-generation/scripts/: merge_junit_reports.py
ai-test-generation/src/ai_test_generation/: __init__.py  cli.py  core.py
ai-test-generation/src/ai_test_generation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ai-test-generation/tests/: test_allure_example.py  test_module_import.py  test_regression.py
ai-test-generation/tests/component/: test_renderers_component.py
ai-test-generation/tests/e2e/: test_guidance_generation_e2e.py
ai-test-generation/tests/integration/: test_cli_integration.py
ai-test-generation/tests/unit/: test_core.py
automation-framework/: .coverage  Dockerfile  Makefile  README.md  allure-categories.json  allure.properties  conftest.py  conftest_docker.py  coverage.xml  custom_test_matrix.json  demo_test_matrix.json  docker-compose.yml  package.json  pyproject.toml  pytest-docker.ini  pytest.ini  requirements.txt  students_courses_test_matrix.json  user-service-consumer-user-service-provider.json
automation-framework/.github/workflows/: ci.yml  parallel-testing-demo.yml  students-courses-api-matrix.yml
automation-framework/docs/: allure-integration.md  api-matrix-testing.md  docker-integration-testing.md  parallel-testing.md  test-types.md
automation-framework/reports/: junit.xml  report.html
automation-framework/reports/allure-report/: index.html
automation-framework/reports/allure-results/: 00c6151e-4d83-403f-9b15-4df05d16090f-container.json  (+458 more)
automation-framework/scripts/: demo_parallel_testing.py  generate_test_matrix.py  generate_test_summary.py  parallel_testing_demo.py  run-docker-integration-tests.sh
automation-framework/src/: __init__.py
automation-framework/test_data/: init.sql
automation-framework/tests/: __init__.py  parallel_testing_example.py  test_allure_example.py  test_parallel_testing_demo.py  test_regression.py
(+880 files in other folders)
